2A/05_Projet_GL/src/test/deca/context/invalid/complet/96_call_method_asm.deca
// Description :
//  passer bool au lieu int a une method asm
// Resultats :
//    ligne 19 :  le boolean ne peut pas être affecté à int
// Historique : 
//  cree le 18/01/2024

class A {

    void get(int i) asm (
        "bonjour"
    );
}
{
    A a ;
    a.get(true);
}